# ArenaX

./: .gitignore  DEVELOPMENT.md  ISSUES_BACKLOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml  JWT_SERVICE.md  README.md  docker-compose.yml  env.example  init-dev-db.sql
backend/migrations/: 20240928000001_create_core_tables.down.sql  20240928000001_create_core_tables.up.sql  20240928000002_add_triggers_and_views.down.sql  20240928000002_add_triggers_and_views.up.sql  README.md
backend/src/: api_error.rs  config.rs  db.rs  lib.rs  main.rs  telemetry.rs
backend/src/auth/: jwt_service.rs  mod.rs
backend/src/http/: health.rs  matches.rs  mod.rs  tournaments.rs
backend/src/models/: audit_log.rs  leaderboard.rs  match_model.rs  match_models.rs  mod.rs  stellar.rs  stellar_account.rs  stellar_transaction.rs  tournament.rs  user.rs  wallet.rs
backend/src/realtime/: events.rs  mod.rs  redis_client.rs  websocket.rs
backend/src/service/: auth_service.rs  match_service.rs  mod.rs  stellar_service.rs  tournament_service.rs  wallet_service.rs
backend/tests/: jwt_integration_tests.rs  jwt_unit_tests.rs  mod.rs
contracts/: .gitignore  Cargo.toml  README.md
contracts/arenax-token/src/: contract.rs  lib.rs  storage_types.rs
contracts/escrow/src/: lib.rs
contracts/example/: Cargo.toml
contracts/example-contract/: Cargo.toml
contracts/example-contract/src/: lib.rs
contracts/example/src/: lib.rs
contracts/reputation/: Cargo.toml  README.md
contracts/reputation/src/: lib.rs  test.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: admin.rs  governance.rs  lib.rs  lib_complex.rs  slashing.rs  test.rs  types.rs
contracts/staking/test_snapshots/test/: test_create_pool.1.json  test_initialize.1.json
contracts/tournament-manager/: Cargo.toml
contracts/tournament-manager/src/: lib.rs  test.rs
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  render.yaml
frontend/public/: manifest.json  offline.html  sw.js
frontend/src/: register-sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/offline/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: InstallPWAButton.tsx  RegisterSW.tsx
frontend/src/components/layout/: AppLayout.tsx  Footer.tsx  Header.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx
frontend/src/hooks/: useAuth.ts  useAuth.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts  match.ts  tournament.ts  user.ts
